2012-06-08  Jeff Johnston  <jjohnstn@redhat.com>

	* pom.xml: Bump up version.
	* META-INF/MANIFEST.MF: Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHover.java (getMatchingFunctions): Add
	check for function names starting with "0" and ignore them for creating list.

2012-03-22  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/libhover/LibhoverPlugin.java (LibhoverPlugin): Make public.

2012-03-05  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/libhover/LibhoverPlugin.java (static initializer): 
	(LibhoverPlugin): Fix singleton setting to be valid.
	* src/org/eclipse/linuxtools/cdt/libhover/TypedefInfo.java (getTransformedType): Fix
	code to assign result of String replaceAll method to the original string.
	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHover.java: Add final qualifier
	to constant string.
	* src/org/eclipse/linuxtools/internal/cdt/libhover/preferences/PreferenceConstants.java: Add
	final qualifier to constants.
	 
2011-03-15  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHover.java (HelpResourceDescriptor.getHelpResources): 
	Use getDocs() rather than getLocation().

2011-03-11  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHover.java (isParmMatch): Fix to
	allow for the case when we have a referenced version of the class were in passed as an
	argument.

2011-02-24  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Allow tests to access internal classes.
	* schema/org.eclipse.linuxtools.cdt.libhover.library.exsd: Update schema description.

2011-02-17  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves #328655
	* src/org/eclipse/linuxtools/internal/cdt/libhover/properties/LibHoverPropertyPage.java: Removed.
	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHoverLoadJob.java: New file.
	* META-INF/MANIFEST.MF: Bump version to 1.1.0.